[package]
name = "blog_os"
version = "0.1.0"
authors = ["ker <ker@qlik.com>"]
edition = "2018"

[features]
integration-test = []

[dependencies]
bootloader = "0.3.12"
pc-keyboard = "0.3.1"
pic8259_simple = "0.1.1"
spin = "0.4.9"
uart_16550 = "0.1.0"
volatile = "0.2.3"
x86_64 = "0.4.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dev-dependencies]
array-init = "0.0.3"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.bootimage]
default-target = "x86_64-blog_os.json"